fixed logo on firefox

--- a/packages/bridge/src/components/AppBar/index.less
+++ b/packages/bridge/src/components/AppBar/index.less
@@ -72,7 +72,7 @@ header.ant-layout-header.App-Bar {
     max-width: 240px;
     height: 100%;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-start !important;
     padding: 0;
     .nav-burger {
       display: inline-block;
